--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,10 @@
 name: aria2c
 description: "Use dart and aria2c to connect websocket for JsonRPC communication."
-version: 0.0.1
+version: 0.0.3
 homepage: https://github.com/pgfeng/aria2c
 
 environment:
-  sdk: ^3.5.3
-  flutter: ">=1.17.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
